# repayment

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt
src/: core.py
src/repayment/: core.py  lang.py  report.py
